--- a/index.html
+++ b/index.html
@@ -106,6 +106,31 @@
 <div id="navegacion" style="margin-bottom: 20px; text-align: center;"></div>
 
   <h1>Simulador - Lógica de Programación</h1>
+ <div style="text-align:center; margin-bottom: 20px;">
+  <label for="filtroMateria"><strong>Filtrar por materia:</strong></label>
+  <select id="filtroMateria">
+    <option value="todas">Todas las materias</option>
+    <option value="Lógica de Programación">Lógica de Programación</option>
+    <option value="Programación">Programación</option>
+    <option value="Estructuras de Datos">Estructuras de Datos</option>
+    <option value="Programación II">Programación II</option>
+    <option value="Programación Web">Programación Web</option>
+    <option value="Ingeniería de Software">Ingeniería de Software</option>
+    <option value="Programación para Móviles">Programación para Móviles</option>
+    <option value="Base de Datos I">Base de Datos I</option>
+    <option value="Base de Datos II">Base de Datos II</option>
+    <option value="Proceso de Negocios">Proceso de Negocios</option>
+    <option value="Redes de Computadoras">Redes de Computadoras</option>
+    <option value="Redes de Computadoras II">Redes de Computadoras II</option>
+    <option value="Sistemas Operativos">Sistemas Operativos</option>
+    <option value="Arquitectura de Computadoras">Arquitectura de Computadoras</option>
+     <option value="Seguridad Informática">Seguridad Informática</option>
+        <option value="Auditoría Informática">Auditoría Informática</option>
+           
+  </select>
+</div>
+
+
   <div id="contenedor"></div>
   <div id="resultado"></div>
   <script src="preguntas.js"></script>
