--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
     <option value="Arquitectura de Computadoras">Arquitectura de Computadoras</option>
      <option value="Seguridad Informática">Seguridad Informática</option>
         <option value="Auditoría Informática">Auditoría Informática</option>
+         <option value="Ofimática">Ofimática</option>
+        <option value="Gestión de Proyectos de Software">Gestión de Proyectos de Software</option>
            
   </select>
 </div>
